[package]
name = "dare"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of a tableau parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cjavad/dare"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["latex"]
latex = []
